# fix-cnfs

./: README.md  pyproject.toml
fix_cnfs/: __init__.py  fixer.py  logging_config.py  main.py  processing.py  runner.py
fix_cnfs/validation/: __init__.py  checks.py  cnf_xor_parser.py  validator.py
